fixing xs view of cmf. fixing going to id covered by navbar for team page.

--- a/css/layout.css
+++ b/css/layout.css
@@ -66,6 +66,14 @@ a:focus,a:visited{
 	border-bottom: 2px solid rgba(0,17,26,1) !important;
 }
 @media (max-width: 767px){
+	/*NAVIGATION BAR*/
+.navbar, .navbar-default{
+	margin-bottom: 0;
+	min-height: 60px;
+	border:0;
+	border-radius: 0;
+	background: rgba(  255, 255, 255,1);
+}
 	.navbar-default .navbar-nav>li>a{
 		border-bottom: 0 !important;
 	}
