--- a/css/team.css
+++ b/css/team.css
@@ -6,3 +6,10 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
+.anchor{
+	display:block;
+	position:relative;
+	top:-150px;
+	visibility: hidden;
+}
